--- a/frontend/pages/html/home.html
+++ b/frontend/pages/html/home.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/assets/logo.svg">
+    <link rel="stylesheet" href="/pages/css/home.css">
+    <!-- Using bootstrap icons for consistency with rest of app -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
-    
+    <!-- Tabs Recipes and Followed -->
+    <div class="tabs-container">
+      <button class="tab-btn active">Last Recipes</button>
+      <button class="tab-btn">Followed</button>
+    </div>
+
+    <!-- TODO: Category Filter -->
+
+    <!-- Recipe Grid -->
+    <div class="recipes-grid" id="recipesGrid">
+        <!-- Recipes will be loaded here by JavaScript -->
+    </div>
+
+    <script src="/pages/js/home.js"></script>
 </body>
 </html>
