fixed login.html and added login.css
Fixed login.html and created login.css. Changed svg of chef icon into img.

--- a/frontend/pages/html/login.html
+++ b/frontend/pages/html/login.html
@@ -35,12 +35,7 @@
                 </button>
                 <button class="role-btn" data-role="chef">
                     <!-- Custom chef icon. Tried using bootstrap but needed specific design -->
-                    <svg class="icon-chef" viewBox="0 0 24 24">
-                        <path
-                            d="M6 3.54098C2.6863 3.54098 0 6.18324 0 9.44262C0 11.8626 1.48092 13.9425 3.6 14.8532V18H20.4V14.8532C22.5191 13.9425 24 11.8626 24 9.44262C24 6.18324 21.3137 3.54098 18 3.54098C17.6994 3.54098 17.404 3.56273 17.1151 3.60471C16.3925 1.50853 14.3753 0 12 0C9.62472 0 7.60753 1.50853 6.88483 3.60471C6.59608 3.56273 6.30062 3.54098 6 3.54098Z" />
-                        <path
-                            d="M19.9998 20.0001H3.99976C4.0114 21.7193 4.0932 22.6609 4.66746 23.2791C5.33709 24.0001 6.41484 24.0001 8.57036 24.0001H15.4292C17.5847 24.0001 18.6624 24.0001 19.3321 23.2791C19.9064 22.6609 19.9881 21.7193 19.9998 20.0001Z" />
-                    </svg>
+                    <img src="assets/chefHat.svg" alt="Chef" class="icon-chef">
                     Chef
                 </button>
             </div>
@@ -64,7 +59,7 @@
                     </button>
                 </div>
 
-                <button type="submit" class="register-btn">Login</button>
+                <button type="submit" class="login-btn">Login</button>
             </form>
 
             <div class="auth-footer">
@@ -75,5 +70,7 @@
             </div>
         </div>
     </div>
+
+    <!--TODO: Add link to JavaScript file for interactivity-->
 </body>
 </html>
