--- a/frontend/pages/html/home.html
+++ b/frontend/pages/html/home.html
@@ -10,14 +10,74 @@
     <!-- Using bootstrap icons for consistency with rest of app -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
+
 <body>
     <!-- Tabs Recipes and Followed -->
     <div class="tabs-container">
-      <button class="tab-btn active">Last Recipes</button>
-      <button class="tab-btn">Followed</button>
+        <button class="tab-btn active">Last Recipes</button>
+        <button class="tab-btn">Followed</button>
     </div>
 
-    <!-- TODO: Category Filter -->
+    <!-- Category filter section -->
+    <div class="category-filter">
+        <h3>Category</h3>
+        <div class="category-scroller">
+
+            <button id="scrollLeft">
+                <i class="bi bi-chevron-left"></i>
+            </button>
+
+            <div class="pill-list" id="categoryPills">
+                <div class="filter-pill">
+                    <button class="active">
+                        <img src="assets/icons/filterAll.svg" alt="">
+                    </button>
+                    <span>All</span>
+                </div>
+                <div class="filter-pill">
+                    <button>
+                        <img src="assets/icons/filterHealthy.svg" alt="">
+                    </button>
+                    <span>Healthy</span>
+                </div>
+                <div class="filter-pill">
+                    <button>
+                        <img src="assets/icons/filterVegan.svg" alt="">
+                    </button>
+                    <span>Vegan</span>
+                </div>
+                <div class="filter-pill">
+                    <button>
+                        <img src="assets/icons/filterVegetarian.svg" alt="">
+                    </button>
+                    <span>Vegetarian</span>
+                </div>
+                <div class="filter-pill">
+                    <button>
+                        <img src="assets/icons/filterSnack.svg" alt="">
+                    </button>
+                    <span>Snack</span>
+                </div>
+                <div class="filter-pill">
+                    <button>
+                        <img src="assets/icons/filterDrink.svg" alt="">
+                    </button>
+                    <span>Drink</span>
+                </div>
+                <div class="filter-pill">
+                    <button>
+                        <img src="assets/icons/filterDessert.svg" alt="">
+                    </button>
+                    <span>Dessert</span>
+                </div>
+            </div>
+
+            <button id="scrollRight">
+                <i class="bi bi-chevron-right"></i>
+            </button>
+
+        </div>
+    </div>
 
     <!-- Recipe Grid -->
     <div class="recipes-grid" id="recipesGrid">
@@ -26,4 +86,5 @@
 
     <script src="/pages/js/home.js"></script>
 </body>
+
 </html>
