--- a/frontend/pages/html/home.html
+++ b/frontend/pages/html/home.html
@@ -7,11 +7,23 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/assets/logo.svg">
     <link rel="stylesheet" href="/pages/css/home.css">
+    <link rel="stylesheet" href="/pages/css/navBar.css">
     <!-- Using bootstrap icons for consistency with rest of app -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <!-- Page header with logo and navigation -->
+    <header class="header">
+      <div class="header-content">
+        <div class="logo">
+          <img src="/assets/logo.svg" alt="Taste Knowledge" />
+        </div>
+        <!-- NavBar injected -->
+        <div id="navbar-container" aria-hidden="true"></div>
+      </div>
+    </header>
+
     <!-- Tabs Recipes and Followed -->
     <div class="tabs-container">
         <button class="tab-btn active">Last Recipes</button>
@@ -85,6 +97,7 @@
     </div>
 
     <script src="/pages/js/home.js"></script>
+    <script src="/pages/js/navBar.js"></script>
 </body>
 
 </html>
