added login.js and chefBot.py
app.py: Created Flask blueprint for ChefBot using Hugging Face InferenceClient. Optimized session storage by limiting chat history to the last 6 messages. Added /set_recipe and /chat endpoints.
login.js: Implemented dynamic role selection (User/Chef) for the login form. Added password visibility toggle and error message handling. Switched to asynchronous fetch for login submission with redirect handling.

--- a/frontend/pages/html/login.html
+++ b/frontend/pages/html/login.html
@@ -71,6 +71,6 @@
         </div>
     </div>
 
-    <!--TODO: Add link to JavaScript file for interactivity-->
+    <script src="pages/js/login.js"></script>
 </body>
 </html>
