--- a/frontend/pages/html/home.html
+++ b/frontend/pages/html/home.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/assets/logo.svg">
     <link rel="stylesheet" href="/pages/css/home.css">
     <link rel="stylesheet" href="/pages/css/navBar.css">
+    <link rel="stylesheet" href="/pages/css/recipeCard.css">
     <!-- Using bootstrap icons for consistency with rest of app -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
@@ -96,8 +97,8 @@
         <!-- Recipes will be loaded here by JavaScript -->
     </div>
 
-    <script src="/pages/js/home.js"></script>
     <script src="/pages/js/navBar.js"></script>
+    <script src="/pages/js/home.js"></script>
+    <script src="/pages/js/recipeCard.js"></script>
 </body>
-
 </html>
