--- a/frontend/pages/html/profile.html
+++ b/frontend/pages/html/profile.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/assets/logo.svg">
     <link rel="stylesheet" href="/pages/css/profile.css">
     <link rel="stylesheet" href="/pages/css/navBar.css">
+    <link rel="stylesheet" href="/pages/css/recipeCard.css">
     <!-- Using bootstrap icons for consistency with rest of app -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
@@ -95,7 +96,8 @@
         </div>
     </div>
 
-    <script src="/pages/js/navbar.js" defer></script>
-    <script src="/pages/js/profile.js" defer></script>
+    <script src="/pages/js/navbar.js"></script>
+    <script src="/pages/js/profile.js"></script>
+    <script src="/pages/js/recipeCard.js"></script>
 </body>
 </html>
