added chefBot.js, explore.css, explore.js, modified profile.js
Added chefBot.js logic, explore.css style, explore.js logic, modified profile.js logic. Added links in HTMLs to their js

--- a/frontend/pages/html/explore.html
+++ b/frontend/pages/html/explore.html
@@ -115,7 +115,7 @@
         </div>
     </div>
 
-    <!-- TODO: Add explore.js-->
+    <script src="/pages/js/explore.js"></script>
     <script src="/pages/js/navbar.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
   </body>
