--- a/frontend/pages/html/recipePage.html
+++ b/frontend/pages/html/recipePage.html
@@ -144,6 +144,7 @@
         </div>
     </div>
 
-    <!-- TODO: Add chefBot.js and recipePage.js -->
+    <script src="/pages/js/chefBot.js"></script>
+    <script src="/pages/js/recipePage.js"></script>
 </body>
 </html>
