--- a/frontend/pages/html/addRecipe.html
+++ b/frontend/pages/html/addRecipe.html
@@ -232,6 +232,6 @@
 
     <script src="/pages/js/addRecipe.js"></script>
     <script src="/pages/js/sw-register.js"></script>
-    <script src="/pages/js/navbar.js"></script>
+    <script src="/pages/js/navBar.js"></script>
 </body>
 </html>
