--- a/frontend/pages/html/chefProfile.html
+++ b/frontend/pages/html/chefProfile.html
@@ -97,7 +97,7 @@
     </div>
 
     <script src="/pages/js/chefProfile.js"></script>
-    <script src="/pages/js/navbar.js"></script>
+    <script src="/pages/js/navBar.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
 </body>
 
