--- a/frontend/pages/html/explore.html
+++ b/frontend/pages/html/explore.html
@@ -116,7 +116,7 @@
     </div>
 
     <script src="/pages/js/explore.js"></script>
-    <script src="/pages/js/navbar.js"></script>
+    <script src="/pages/js/navBar.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
   </body>
 </html>
