--- a/frontend/pages/html/profile.html
+++ b/frontend/pages/html/profile.html
@@ -96,7 +96,7 @@
         </div>
     </div>
 
-    <script src="/pages/js/navbar.js"></script>
+    <script src="/pages/js/navBar.js"></script>
     <script src="/pages/js/profile.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
 </body>
