modified home.css and home.js to center buttons. Added sw-register link to all html files. Added sw.js and sw-register.js
Modified home.css and home.js to center buttons. Added sw-register link to all html files. Added sw.js and sw-register.js for PWA implemantation, added cache methods.

--- a/frontend/pages/html/addRecipe.html
+++ b/frontend/pages/html/addRecipe.html
@@ -233,5 +233,6 @@
     <script src="/pages/js/addRecipe.js"></script>
     <script src="/pages/js/sw-register.js"></script>
     <script src="/pages/js/navBar.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 </html>
