--- a/frontend/pages/html/offline.html
+++ b/frontend/pages/html/offline.html
@@ -24,5 +24,7 @@
             <button class="secondary" onclick="window.location.reload()">Reload</button>
         </div>
     </div>
+    
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 </html>
