--- a/frontend/pages/html/recipePage.html
+++ b/frontend/pages/html/recipePage.html
@@ -146,5 +146,6 @@
 
     <script src="/pages/js/chefBot.js"></script>
     <script src="/pages/js/recipePage.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 </html>
