--- a/frontend/pages/html/register.html
+++ b/frontend/pages/html/register.html
@@ -79,5 +79,6 @@
     </div>
     
     <script src="pages/js/register.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 </html>
