--- a/frontend/pages/html/chefProfile.html
+++ b/frontend/pages/html/chefProfile.html
@@ -99,6 +99,7 @@
     <script src="/pages/js/chefProfile.js"></script>
     <script src="/pages/js/navBar.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 
 </html>
