--- a/frontend/pages/html/explore.html
+++ b/frontend/pages/html/explore.html
@@ -118,5 +118,6 @@
     <script src="/pages/js/explore.js"></script>
     <script src="/pages/js/navBar.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
   </body>
 </html>
