--- a/frontend/pages/html/home.html
+++ b/frontend/pages/html/home.html
@@ -16,13 +16,13 @@
 <body>
     <!-- Page header with logo and navigation -->
     <header class="header">
-      <div class="header-content">
-        <div class="logo">
-          <img src="/assets/logo.svg" alt="Taste Knowledge" />
+        <div class="header-content">
+            <div class="logo">
+                <img src="/assets/logo.svg" alt="Taste Knowledge" />
+            </div>
+            <!-- NavBar injected -->
+            <div id="navbar-container" aria-hidden="true"></div>
         </div>
-        <!-- NavBar injected -->
-        <div id="navbar-container" aria-hidden="true"></div>
-      </div>
     </header>
 
     <!-- Tabs Recipes and Followed -->
@@ -100,5 +100,6 @@
     <script src="/pages/js/navBar.js"></script>
     <script src="/pages/js/home.js"></script>
     <script src="/pages/js/recipeCard.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 </html>
