--- a/frontend/pages/html/login.html
+++ b/frontend/pages/html/login.html
@@ -72,5 +72,6 @@
     </div>
 
     <script src="pages/js/login.js"></script>
+    <script src="/pages/js/sw-register.js"></script>
 </body>
 </html>
