--- a/frontend/pages/html/recipePage.html
+++ b/frontend/pages/html/recipePage.html
@@ -125,6 +125,23 @@
         </div>
     </div>
 
+    <!-- Delete Comment Confirmation Modal -->
+    <div id="delete-comment-modal" class="modal-overlay hidden" aria-hidden="true">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Delete Comment</h3>
+                <button class="modal-close" aria-label="Close"><i class="bi bi-x"></i></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this comment? This action cannot be undone.</p>
+                <div class="modal-actions">
+                    <button id="cancel-delete-btn" class="btn-secondary">Cancel</button>
+                    <button id="confirm-delete-btn" class="btn-danger">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- ChefBot Modal -->
     <div id="chefbot-modal" class="modal hidden" aria-hidden="true">
         <div class="modal-header">
